--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,12 +79,9 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+body{
+  background-color: #babdbf0d;
 }
-
 
 a {
   color: inherit;
